Run CI tests on index.json changes and run verify-new-library-version-compatibility.yml with all supported OS/JDK combinations (#1286)
* Run tests when index.json changes

* Make verify-new-library-version-compatibility run on JDK/os matrix from ci.json and aggregate results